<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UploadImage" >

    <TextView
        android:id="@+id/connexusTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexus" />
    
    <Button 
        android:id="@+id/chooseLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connexusTag"
       	android:text="@string/buttonLibrary"
       	android:onClick="chooseLibrary"
        />
    
    <Button 
        android:id="@+id/useCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseLibrary"
       	android:text="@string/buttonCamera"
       	android:onClick="useCamera"
        />

    <EditText
        android:id="@+id/addCommentsTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/useCamera"
        android:hint="@string/CommentsAndTags" />
    
    <Button 
        android:id="@+id/uploadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addCommentsTags"
       	android:text="@string/buttonUploadPicture"
       	android:onClick="uploadFile"
        />

    

</RelativeLayout>
