<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewAllStreams" >

    <TextView
        android:id="@+id/connexusTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexus" />
    
    <GridView
        android:id="@+id/allStreams"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connexusTag"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />
    
    <EditText
        android:id="@+id/searchStreams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/allStreams"
        android:hint="@string/searchHint" 
        />
    
    <Button 
        android:id="@+id/buttonNearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/allStreams"
        android:text="@string/buttonLabelNearby"
        />
    
    <Button 
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchStreams"
        android:text="@string/buttonLabelSearch"
        android:onClick="searchStreams"
        />

</RelativeLayout>
