<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewSingleStream" >

    <TextView
        android:id="@+id/connexusTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexus" />
    
    <GridView
        android:id="@+id/singleStream"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connexusTag"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />
    
    <Button 
        android:id="@+id/morePictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleStream"
       	android:text="@string/buttonMorePictures"
       	android:onClick="morePictures"
        />
    
    <Button 
        android:id="@+id/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/morePictures"
       	android:text="@string/buttonUploadImage"
       	android:onClick="uploadImage"
        />
    
    <Button 
        android:id="@+id/streams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadImage"
       	android:text="@string/buttonStreams"
       	android:onClick="streams"
        />

</RelativeLayout>
